Изменены методы load и dump. Изменены и добавлены unit-тесты